[edit] t3.small 최적화